@@ -1,4 +1,4 @@
-$Id: CHANGES,v 1.6 1999/10/13 09:57:12 stelian Exp $
+$Id: CHANGES,v 1.7 1999/10/18 09:47:58 tiniou Exp $
 
 Changes between versions 0.4b7 and 0.4b8 (released ???????????????)
 ===================================================================
@@ -8,6 +8,10 @@ Changes between versions 0.4b7 and 0.4b8 (released ???????????????)
 
 2.	Added the dump/restore version in the usage text so one can
 	easily verify the version he is using.
+
+3.	Small patch from Nuno Oliveira <nuno@eq.uc.pt> which fixes
+	a va_start/va_end problem on linux-ppc (always call va_start
+	va_end in pairs each time we use a vararg function).
 
 Changes between versions 0.4b6 and 0.4b7 (released October 8, 1999)
 ===================================================================
